Bug 90472 - Bibliography database doesnt set bibliography type
Summary: Bibliography database doesnt set bibliography type
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 Daily
Hardware: Other All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0 target:4.3.7 target:4.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-04-06 06:16 UTC by Yousuf Philips (jay) (retired)
Modified: 2015-12-17 08:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (102.34 KB, image/png)
2015-04-06 06:16 UTC, Yousuf Philips (jay) (retired)
Details
this fixes the *old* problem of the type not initially set (11.49 KB, patch)
2015-04-09 19:57 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-04-06 06:16:46 UTC
Created attachment 114639 [details]
screenshot

Steps:
1) Open Writer
2) Tools > Bibliography Database
3) Notice that the type drop down in the entry view isnt set.
4) Select entries in the spreadsheet view
5) Notice that the type drop down in the entry view isnt set.

This is a regression, as it works correctly in 4.2.6 for step 5. Step 3 is also a bug that is OOo inherited.

Version: 4.5.0.0.alpha0+
Build ID: b024e36ddb3b53163d7a01f6f7b5aadb7a858cd9
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-03-31_08:18:46
Comment 1 A (Andy) 2015-04-06 11:57:01 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 2 Matthew Francis 2015-04-09 04:23:49 UTC
This appears to have changed at the below commit. Unsure if this is still relevant given the UI rework (see bug 90473), but in any case that needs to be fixed before it can be seen if this one is still present.

    commit 03a2b4a80c5854bcb8520f2a43e485b98e3eba8f
    Author:     Lionel Elie Mamane <lionel@mamane.lu>
    AuthorDate: Wed Aug 6 15:17:13 2014 +0200
    Commit:     Lionel Elie Mamane <lionel@mamane.lu>
    CommitDate: Wed Aug 6 13:49:32 2014 +0000
    
        fdo#82151 when constructing column object, replace m_aCurrentRow by a function
    
        The passed m_aCurrentRow becomes out-of-date as soon as the current row changes.
        This also hides an implementation detail of ORowSet to ORowSet(Data)Column.
Comment 3 Matthew Francis 2015-04-09 04:28:43 UTC
Not really an enhancement - a minor bug. A small part of the issue is inherited, but let's treat it as a regression.

-> Severity: minor
Comment 4 Matthew Francis 2015-04-09 12:12:08 UTC
I wondered if this had been fixed by the UI conversion and was merely obscured by bug 90473, but it seems not.

Adding Cc: to lionel@mamane.lu, caolanm@redhat.com; Could you possibly take a look at this one? Thanks

(commit apparently responsible identified in comment 2)
Comment 5 Yousuf Philips (jay) (retired) 2015-04-09 12:47:32 UTC
(In reply to Matthew Francis from comment #3)
> Not really an enhancement - a minor bug. A small part of the issue is
> inherited, but let's treat it as a regression.

Sorry that was my mistake. :D
Comment 6 Caolán McNamara 2015-04-09 19:57:04 UTC
Created attachment 114704 [details]
this fixes the *old* problem of the type not initially set

This would fix the old problem of the type not getting auto-selected at first load, but the new problem remains, so stashing it here in the meantime
Comment 7 Caolán McNamara 2015-04-09 19:57:47 UTC
I mean the above fixes the ancient step 3 bug
Comment 8 Caolán McNamara 2015-04-09 20:11:08 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e41b069bcc1482eb4d3fabb6d475db4bf3d4e57

I'm a little confused now, I blew away my user dir and everything now works fine for me. i.e. I don't see 5 anymore.
Comment 9 Commit Notification 2015-04-10 00:16:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebdaab9d4a042f1338f97628cf0c0f294d7dc059&h=libreoffice-4-3

Related: tdf#90472 initial load of bibliography doesn't...

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Yousuf Philips (jay) (retired) 2015-04-10 09:38:16 UTC
(In reply to Caolán McNamara from comment #8)
> I'm a little confused now, I blew away my user dir and everything now works
> fine for me. i.e. I don't see 5 anymore.

I can confirm that within the last 3 days, step 5 is fixed as with or without a blank profile it didnt work on master 2015-04-07@42 and now it works with 2015-04-10@42.
Comment 11 Commit Notification 2015-04-13 06:33:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73f75e51726235ad2c80a6143fecf08fe802cc1f&h=libreoffice-4-4

Related: tdf#90472 initial load of bibliography doesn't...

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 08:51:52 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]